# spotify-cpp

./: .gitignore  CMakeLists.txt  README
cmake/: FindBoost.cmake
headers/: httplib.h
src/: main.cpp
